Move list no longer stretches the screen with too many moves.

--- a/chess-website/src/Components/ChessPage/Components/GameInfo/GameInfo.css
+++ b/chess-website/src/Components/ChessPage/Components/GameInfo/GameInfo.css
@@ -2,12 +2,15 @@
     margin-left:20px;
     padding:0px;
     background-color: #d6d4cc;
-
+    overflow-y: auto;
+    overflow-x: hidden;
     flex-direction:column;
     border: solid #96948f;
     border-width: 3px;
     border-radius: 3px;
     box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.2);
+    max-height: 675px;
+
 }
 .MoveList p{
     display: flex;
@@ -21,7 +24,7 @@ p > span:first-child {
     text-align: right;
 }
 p > span:nth-child(2){
-    width: 20px;
+    width: 60px;
     text-align: right;
 }
 p > span:nth-child(3){
@@ -29,7 +32,7 @@ p > span:nth-child(3){
     text-align: right;
 }
 p > span:nth-child(4){
-    width: 40px;
+    width: 60px;
     text-align: right;
     padding-right: 15px;
 }
@@ -39,5 +42,5 @@ p > span:nth-child(4){
 
 
 .MoveText{
-    width:200px;
+    width:250px;
 }
